syntax = "proto3";
option java_package = "com.FTEmulator.profile.grpc";

service Profile {

    rpc ProfileStatus (ProfileStatusRequest) returns (ProfileStatusResponse);

    rpc GetUser(UserRequest) returns (UserResponse);

}

// Status
message ProfileStatusRequest {}

message ProfileStatusResponse {
    bool ok = 1;
}

// Get user
message UserRequest {
    string userId = 1;
}

message UserResponse {
    string userId = 1;
    string name = 2;
    string email = 3;
}
